examples/misc/error/compilation/eval_wdt_int.bfr
let main = [
  $alloc {x}
  + x x
]